60% del proyecto terminado

--- a/TPFinalNivel2_Juaristi/Negocio/Negocio.csproj
+++ b/TPFinalNivel2_Juaristi/Negocio/Negocio.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Compile Include="Acceso_DB.cs" />
     <Compile Include="ArticulosDatos.cs" />
+    <Compile Include="CategoriasDatos.cs" />
+    <Compile Include="MarcasDatos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
