--- a/TPFinalNivel2_Juaristi/Gestor_de_catalogo/Gestor_de_catalogo.csproj
+++ b/TPFinalNivel2_Juaristi/Gestor_de_catalogo/Gestor_de_catalogo.csproj
@@ -58,6 +58,12 @@
     <Compile Include="Frm_alta_articulo.Designer.cs">
       <DependentUpon>Frm_alta_articulo.cs</DependentUpon>
     </Compile>
+    <Compile Include="Frm_Detalle.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_Detalle.Designer.cs">
+      <DependentUpon>Frm_Detalle.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -65,6 +71,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_alta_articulo.resx">
       <DependentUpon>Frm_alta_articulo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm_Detalle.resx">
+      <DependentUpon>Frm_Detalle.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
